examples/type_system/failing/125_string_interpolation_missing_close_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let msg = "Hello #{name"
let after = 3
